added about page

--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
         </div>
     </div>
 
-
+    <div class="footer">
+        Copyright &copy; 2023 jacobsjo. <a href="about.html">About</a>
+    </div>
 </body>
 
 </html>
