close window on go back if no history

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     </div>
     <div class="header">
-        <p><a href="javascript:history.back()">Go Back</a></p>
+        <p><a href="javascript:history.back() || window.close()">Go Back</a></p>
     </div>
 </body>
 </html>
