add link to datapack map wiki; add legal disclaimer

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <p>This website contains a collection tools for the creation of Minecraft datapacks and other projects developed mainly by jacobsjo (Jochen Jacobs, hereafter: the "Author").
            The subdomains of this domain contain the Minecraft tools "Snowcapped", "Datapack Map", "Densify Funktion Editor", and "Jigsaw Previewer"; all developed mainly by jacobsjo (hereafter: the "Tools").</p>
         <p>Minecraft is a trademark of Microsoft Corporation.
-           This website, the Tools and the Author are not asociated with Minecraft, Mojang, or Microsoft. 
+           This website and the Tools are NOT AN OFFICIAL MINECRAFT SERVICE. NOT APPROVED BY OR ASSOCIATED WITH MOJANG OR MICROSOFT. 
            The Tools include vanilla data and assets from Minecraft that are copyright &copy; Mojang.
            The source code of the tools is provided on GitHub under MIT License, listed there.</p>
         <p>THIS WEBSITE AND THE TOOLS ARE PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
