add link to map translation weblate

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         deliberately to support custom worldgen datapacks, such as Terralith.
                     </div>
                 </a>
+                <a class="link" href="https://weblate.catter.dev/projects/jacobsjo/mc-datapack-map/">
+                    Help Translate
+                </a>
                 <a class="link" href="https://github.com/jacobsjo/mc-datapack-map/wiki">
                     Datapack Compatability (wiki)
                 </a>
