improved description meta tags

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css" />
     <title>jacobsjo's Tools and Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A my collection all the Minecraft tools I've worked on, as well as other and minor projects. Display and edit biome layouts, debug structure generation, and design terrain unsing density functions!" />
+    <meta name="description" content="A collection of all my Minecraft tools, as well as other and minor projects. Display and edit biome layouts, debug structure generation, and design terrain using density functions! And a devtool mod to simplify ingame testing." />
     <meta name="author" content="jacobsjo" />
 
     <meta name="og:title" content="jacobsjo's Tools and Projects" />
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://jacobsjo.eu" />
     <meta name="og:image" content="https://jacobsjo.eu/og_image.png" />
-    <meta name="og:description" content="A my collection all the Minecraft tools I've worked on, as well as other and minor projects. Display and edit biome layouts, debug structure generation, and design terrain unsing density functions!" />
+    <meta name="og:description" content="A collection of all my Minecraft tools, as well as other and minor projects. Display and edit biome layouts, debug structure generation, and design terrain using density functions! And a devtool mod to simplify ingame testing." />
 </head>
 
 <body>
