update privacy policy

--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
         <p>THIS WEBSITE AND THE TOOLS ARE PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
         <h1>Privacy Policy</h1>
-        <p>This website and the Tools use no cookies except with explicit permission and does not track any user activity. Any data processed by the Tools remains in the browser of the user and is never sent via the network. </p>
+        <p>This website and the Tools use no cookies except with explicit permission. For statistical purposes this website and the Tools may use <a href="https://beamanalytics.io/">Beam Analytics</a> to collect some anonymous usage data. The goal is to track overall trends in traffic. It is not to track individual visitors. All the data is in aggregate only. No personal data is collected. All processing happens on servers in the EU.</p>
+        <p>Any data processed by the Tools remains in the browser of the user and is never sent via the network. </p>
         <p>This website and the Tools are hosted using GitHub pages. GitHub may collect user personal information from visitors, including logs of visitor IP addresses, to comply with legal obligations, and to maintain the security and integrity of the Website and its Service. See <a href="https://docs.github.com/en/free-pro-team@latest/github/site-policy/github-privacy-statement">GitHub's privacy policy</a> for more information. No data collected by GitHub is accessible by the Author or any third party.
 
     </div>
