add beamanalytics scripts

--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
     <title>About - jacobsjo's Tools and Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="jacobsjo" />
+    <script
+        src="https://beamanalytics.b-cdn.net/beam.min.js"
+        data-token="93ad3a51-68ea-4039-8a8e-1cad878e5f8b"
+        async
+        >
+    </script>
 </head>
 
 <body>
