--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <meta name="og:url" content="https://jacobsjo.eu" />
     <meta name="og:image" content="https://jacobsjo.eu/og_image.png" />
     <meta name="og:description" content="A collection of all my Minecraft tools, as well as other and minor projects. Display and edit biome layouts, debug structure generation, and design terrain using density functions! And a devtool mod to simplify ingame testing." />
+    <script
+        src="https://beamanalytics.b-cdn.net/beam.min.js"
+        data-token="93ad3a51-68ea-4039-8a8e-1cad878e5f8b"
+        async
+    >
+    </script>
 </head>
 
 <body>
